Fixed issue where page content would overlap header when scrolled

--- a/styles/main.css
+++ b/styles/main.css
@@ -33,7 +33,7 @@ body {
 }
 
 header {
-	height: 57px;
+	height: 58px;
     position: fixed;
 	top: 0;
 	left: 0;
